--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -13,7 +13,7 @@
 <body>
   <header class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper blue darken-3">
         <ul>
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;CoinCollector</a></li>
         </ul>
@@ -28,8 +28,8 @@
     {% block content %}
     {% endblock %}
   </main>
-  <footer class="page-footer">
-    <div class="right">All Rights Reserved, &copy; 2021 Coin Collector &nbsp;</div>
+  <footer class="page-footer blue darken-3">
+    <div class="right blue darken-3">All Rights Reserved, &copy; 2021 Coin Collector &nbsp;</div>
   </footer>
 </body>
 </html>
