--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,6 +19,7 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
+          <li><a href="{% url 'coins_create' %}">Add a Coin</a></li>
           <li><a href="/coins">View All My Coins</a></li>
         </ul>
       </div>
