--- a/main_app/templates/coins/detail.html
+++ b/main_app/templates/coins/detail.html
@@ -3,7 +3,11 @@
 
 <h1>Coin Details</h1>
 
-<div class="card">
+
+
+<div class="row">
+  <div class="col s6">
+    <div class="card">
   <div class="card-content">
     <span class="card-title">{{ coin.name }}</span>
     <p>Currency: {{ coin.currency }}</p>
@@ -19,5 +23,39 @@
     <a href="{% url 'coins_delete' coin.id %}">Delete</a>
   </div>
 </div>
+  </div>
+  <div class="col s6">
+  <form method="post">
+    {% csrf_token %}
+    {{ acquired_form.as_p }}
+    <input type="submit" class="btn" value="Add!">
+  </form>
+    <table class="striped">
+      <thead>
+        <tr><th>Acquired</th><th>Date</th></tr>
+      </thead>
+      <tbody>
+        {% for acquired in coin.acquired_set.all %}
+          <tr>
+            <td>{{acquired.get_owned_display}}</td>
+            <td>{{acquired.date}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
+<script>
+ var dateEl = document.getElementById('id_date');
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+
+  var selectEl = document.getElementById('id_owned');
+  M.FormSelect.init(selectEl);
+</script>
 
 {% endblock %}
