--- a/main_app/templates/coins/detail.html
+++ b/main_app/templates/coins/detail.html
@@ -25,7 +25,7 @@
 </div>
   </div>
   <div class="col s6">
-  <form method="post">
+  <form action="{% url 'add_acquired' coin.id %}" method="post">
     {% csrf_token %}
     {{ acquired_form.as_p }}
     <input type="submit" class="btn" value="Add!">
