--- a/main_app/templates/coins/detail.html
+++ b/main_app/templates/coins/detail.html
@@ -45,6 +45,46 @@
     </table>
   </div>
 </div>
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>{{ coin.name }}'s Collectors</h3>
+    {% if coin.collectors.count %}
+      {% for collector in coin.collectors.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              <span style="color: {{ collector.location }}">{{ collector.name }}</span> in {{ collector.location }}
+            </span>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Collectors </h5>
+    {% endif %}
+  </div>
+  <div class="col s6">
+    <h3>Available Collectors</h3>
+    {% if collectors.count %}
+      {% for collector in collectors.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              <span style="color: {{ collector.name }}">{{ collector.name }}</span> in {{ collector.location }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'assoc_collector' coin.id collector.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>{{cat.name}} Already Has All Available Collectors</h5>
+    {% endif %}
+  </div>
 <script>
  var dateEl = document.getElementById('id_date');
   M.Datepicker.init(dateEl, {
